[Docs] Config 에만 의존해서 RateDiscountPolicy 적용 - CoreApplicationConfig 의 package 변경 - Docs 정리 - Test 진행

--- a/docs/관심사의 분리.md
+++ b/docs/관심사의 분리.md
@@ -12,3 +12,7 @@
 
 - 추상화에만 의존하게 코드를 변경하여, 코드내에서는 인터페이스만 남길 수 있게 한다.
   - 의존관계에 대한 고민 없이 실행에만 집중!
+
+### OCP, DIP 를 만족함.
+- DIP : 구현에만 집중하고, 추상화에 의존
+- OCP : 확장에는 열려있으며, 수정에 대해서는 닫혀있어야한다.
