[Docs] IoC, DI 컨테이너에 대한 정리 (3/9)

--- a/docs/객체지향의 원칙.md
+++ b/docs/객체지향의 원칙.md
@@ -11,6 +11,6 @@
   - AppConfig 를 이용해, 의존관계를 주입해줌
 
 # OCP
-- 개발폐쇄원칙 : 소프트웨어 요소는 확장에는 열려있으나 변경에는 닫혀있어야한다.
+- 개방폐쇄원칙 : 소프트웨어 요소는 확장에는 열려있으나 변경에는 닫혀있어야한다.
   - 다형성을 사용하고 클라이언트가 DIP 를 지킨다.
   - 어플리케이션을 사용 영역과 구성 영역으로 나눈다.
