--- a/docs/싱글톤 패턴.md
+++ b/docs/싱글톤 패턴.md
@@ -12,3 +12,14 @@
   - 가급적 읽기만 가능해야한다.
   - 필드 대신 자바에서 공유되지 않는 지역변수, 파라미터 ThreadLocal 등을 사용해야한다.
 - 스프링 빈의 필드에 공유 값을 설정하면 정말 큰 장애가 발생할 수 있으니 유의
+
+
+# @Configuration : Singleton 을 위해 존재하는 어노테이션
+```java
+/**
+ * @Bean memberService -> new MemoryMemberRepository();
+ * @Bean orderService -> new MemoryMemberRepository();
+ * MemoryMemberRepository 가 두 번 생성된다?
+ */
+``` 
+- 바이트 코드를 조작하며,스프링 빈이 싱글톤이 되도록 보장한다.
