--- a/docs/컴포넌트 스캔, 의존관계 자동주입.md
+++ b/docs/컴포넌트 스캔, 의존관계 자동주입.md
@@ -3,12 +3,20 @@
 - 관례를 따라, Root 에 지정하는 것을 권장하며, SpringBoot 일 경우, SpringBootApplication 어노테이션의 메타 어노테이션으로 ComponentScan 이 포함된다.
 
 ## 컴포넌트 스캔 대상
-- @Component - 컴포넌트 스캔
-- @Controller - MVC 컨트롤러
+- @Component: 컴포넌트 스캔
+- @Controller: MVC 컨트롤러
   - 스프링 MVC 컨트롤러로 인식
-- @Service - 비즈니스 로직
+- @Service: 비즈니스 로직
   - 특별한 처리는 없고, 개발자들의 인식을 도움
-- @Repository - 데이터 접근 객체
+- @Repository: 데이터 접근 객체
   - 데이터 접근 계층으로 인식해, 데이터 계층의 예외를 스프링 예외로 변환함
-- @Configuration - 설정 파일
+- @Configuration: 설정 파일
   - 스프링 설정정보로 인식하고, 빈이 싱글톤을 유지하도록 추가 처리함
+
+## 필터
+- excludeFilter
+- includeFilter
+
+
+## 중복 등록과 충돌
+-
