[Docs] 다양한 의존관계 주입 (3/17) - 생성자, 메서드, 필드, 수정자 주입

--- a/docs/컴포넌트 스캔, 의존관계 자동주입.md
+++ b/docs/컴포넌트 스캔, 의존관계 자동주입.md
@@ -19,4 +19,4 @@
 
 
 ## 중복 등록과 충돌
--
+- 빈을 중복으로 등록하는 경우, 시스템 상에서의 빈 등록 외에 코드 상에서의 빈 등록이 중복되는 경우, 개발자의 코드 상에서 등록된 빈이 우선권을 가지나, 현재 스프링 부트에서는 중복된 Bean 이 있을 경우 오류가 나게 변경 (의도하지 않은, 중복을 막기 위함)
