[Test] 생성자 주입에 대해(3/19)

--- a/docs/의존관계 자동주입.md
+++ b/docs/의존관계 자동주입.md
@@ -9,3 +9,12 @@
    - Configuration 클래스처럼 스프링 설정의 역할만 담당하는 경우
    - 애플리케이션의 실제 동작과 상관없는 테스트 코드일 경우는 괜찮다.
 4. 일반 메서드 주입 - 어떤 아무 메서드에나 @Autowired 어노테이션을 삽입할 수 있다.
+
+## 생성자 주입을 선택해라
+1. 불변
+   - 대부분의 의존관계 주입은 한번 일어나면, 변경되지 않는다.
+   - 수정자 주입을 사용하면 setter 를 public 으로 열어두어야함
+     - 누군가 실수로 변경할 수 있고, 변경하면 안되는 메서드를 열어두는 것은 좋지 않다.
+   - 생성자 주입은 객체를 생성할 때 딱 한번만 호출된다. -> 불변하게 설계할 수 있음
+2. 누락
+   - 프레임 워크 없이 순수한 단위테스트를 진행하는 경우?
